# DA15

./: .clangd  .cppcheck-suppressions  .gitignore  .mxproject  CDC_PROTOCOL.md  CMakeLists.txt  CMakePresets.json  DA15-H503.ioc  DA15.ioc  README.md  STM32F072XX_FLASH.ld  STM32H503xx_FLASH.ld  STM32H503xx_RAM.ld  startup_stm32f072xb.s
.github/workflows/: ci.yml
App/Inc/: app.h  audio_eq.h  audio_output.h  display.h  encoder.h  eq_profile.h  fault.h  settings.h  sh1106.h  tusb_config.h  usb_audio.h  usb_comm.h  usb_descriptors.h  version.h
App/Src/: app.c  audio_eq.c  audio_output.c  display.c  encoder.c  eq_profile.c  fault.c  settings.c  sh1106.c  usb_audio.c  usb_comm.c  usb_descriptors.c
Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  system_stm32f0xx.c  system_stm32h5xx.c
Hardware/: DA15.epro  README.md
Hardware/Case/: Base.stl  DA15_BOTTOM.stl  DA15_KNOB.stl  DA15_TOP.stl  Knob.stl  Top.stl
Hardware/Gerber/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_InnerLayer1.G1  Gerber_InnerLayer2.G2  (+4 more)
cmake/: check_memory_layout.cmake
scripts/: static-analysis.sh
tests/: CMakeLists.txt  test_audio_eq.c  test_eq_profile.c  test_util.h
tests/stubs/: SEGGER_RTT.h  stm32h5xx_hal.h
(+2 files in other folders)
